--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,11 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "moment": "^2.29.0",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
