--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.2",
     "moment": "^2.29.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
