--- a/package.json
+++ b/package.json
@@ -41,8 +41,16 @@
     "url": "https://thevss.tech/issues"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
     "@shopify/restyle": "^1.1.0",
-    "color": "^3.1.2"
+    "@types/color": "^3.0.1",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "color": "^3.1.2",
+    "moment": "^2.29.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-vector-icons": "^7.1.0"
   },
   "homepage": "https://thevss.tech#readme",
   "devDependencies": {
